k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx # tell K8s we want ingress controller based on the nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1   # this removes /api from the request
spec:
  rules:
    - http:
        paths:
        - path: /?(.*)   # sends to our React app
          backend:
            serviceName: client-cluster-ip-service
            servicePort: 3000
        - path: /api/?(.*)   # sends to our Express app
          backend: 
            serviceName: server-cluster-ip-service
            servicePort: 5000
